MyOrg2022/force-app/main/default/objects/RecordFromTest__c/RecordFromTest__c.object-meta.xml
<CustomObject>
    <label>RecordFromTest</label>
    <nameField>
        <label>RecordFromTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RecordFromTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>