MyOrg2022/force-app/main/default/objects/RecordFromTest__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>