MyOrg2022/force-app/main/default/objects/RecordFromTest__c/fields/Database_Download_File__c.field-meta.xml
<CustomField>
    <fullName>Database_Download_File__c</fullName>
    <label>Database Download File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Canadian</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Default Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>