MyOrg2022/force-app/main/default/objects/RecordFromTest__c/fields/Download_File_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Download_File_Matrix__c</fullName>
    <label>Download File Matrix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Country</fullName>
            </value>
            <value>
                <fullName>By State</fullName>
            </value>
            <value>
                <fullName>By DMA</fullName>
            </value>
            <value>
                <fullName>By Zip Code</fullName>
            </value>
            <value>
                <fullName>By Province</fullName>
            </value>
            <value>
                <fullName>By Postal Code</fullName>
            </value>
            <value>
                <fullName>Download File Default values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>