MyOrg2022/force-app/main/default/objects/RecordFromTest__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>KT</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>By Country</fullName>
            </value>
            <value>
                <fullName>By State</fullName>
            </value>
            <value>
                <fullName>By DMA</fullName>
            </value>
            <value>
                <fullName>By Zip Code</fullName>
            </value>
            <value>
                <fullName>By Province</fullName>
            </value>
            <value>
                <fullName>By Postal Code</fullName>
            </value>
            <value>
                <fullName>Download File Default values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>