MyOrg2022/force-app/main/default/objects/RecordFromTest__c/fields/WfTest__c.field-meta.xml
<CustomField>
    <fullName>WfTest__c</fullName>
    <label>WfTest</label>
    <length>2</length>
    <type>Text</type>
</CustomField>